tests/negative/regression/r20.orng
// r20.orng:5:28: error: expected a value of type `Int`
// fn main() -> Int { return &[,] }
//                           ^
// 
fn main() -> Int { return &[,] }